change some attributes

--- a/intqos/manager/nbar_application.json
+++ b/intqos/manager/nbar_application.json
@@ -1,31 +1,31 @@
 {"applications":[
-  {"name":"ip-camera","applicationType":"Application","match":"match application ip-camera"},
-  {"name":"rtp","applicationType":"Application","match":"match application rtp"},
-  {"name":"rtsp","applicationType":"Application","match":"match application rtsp"},
-  {"name":"sip","applicationType":"Application","match":"match application sip"},
-  {"name":"telepresence-control","applicationType":"Application","match":"match application telepresence-control"},
-  {"name":"telepresence-data","applicationType":"Application","match":"match application telepresence-data"},
-  {"name":"telepresence-media","applicationType":"Application","match":"match application telepresence-media"},
-  {"name":"vmware-view","applicationType":"Application","match":"match application vmware-view"},
-  {"name":"xmpp-client","applicationType":"Application","match":"match application xmpp-client"},
-  {"name":"telepresence-group","applicationType":"application-group","match":"match application match application application-group telepresence-group"},
-  {"name":"vmware-group","applicationType":"application-group","match":"match application match application application-group vmware-group"},
-  {"name":"webex-group","applicationType":"application-group","match":"match application match application application-group webex-group"},
-  {"name":"business-and-productivity-tools","applicationType":"Category","match":"match application attribute category business-and-productivity-tools"},
-  {"name":"physical-security","applicationType":"Category","match":"match application attribute category physical-security"},
-  {"name":"voice-and-video","applicationType":"Category","match":"match application attribute category voice-and-video"},
-  {"name":"control-and-signaling","applicationType":"sub-category","match":"match application attribute sub-category control-and-signaling"},
-  {"name":"remote-access-terminal","applicationType":"sub-category","match":"match application attribute sub-category remote-access-terminal"},
-  {"name":"video-surveillance","applicationType":"sub-category","match":"match application attribute sub-category video-surveillance"},
-  {"name":"voice-video-chat-collaboration","applicationType":"device-class","match":"match application attribute sub-category voice-video-chat-collaboration"},
-  {"name":"desktop-conferencing","applicationType":"device-class","match":"match application attribute device-class desktop-conferencing"},
-  {"name":"desktop-virtualization","applicationType":"device-class","match":"match application attribute device-class desktop-virtualization"},
-  {"name":"physical-phone","applicationType":"device-class","match":"match application attribute device-class physical-phone"},
-  {"name":"room-conferencing","applicationType":"device-class","match":"match application attribute device-class room-conferencing"},
-  {"name":"software-phone","applicationType":"device-class","match":"match application attribute device-class software-phone"},
-  {"name":"surveillance","applicationType":"device-class","match":"match application attribute device-class surveillance"},
-  {"name":"audio","applicationType":"media-type","match":"match application attribute media-type audio"},
-  {"name":"audio-video","applicationType":"media-type","match":"match application attribute media-type audio-video"},
-  {"name":"control","applicationType":"media-type","match":"match application attribute media-type control"},
-  {"name":"software-phone","applicationType":"media-type","match":"match application attribute media-type data"},
-  {"name":"video","applicationType":"media-type","match":"match application attribute media-type video"}]}
+  {"name":"ip-camera","application_type ":"Application","match":"match application ip-camera"},
+  {"name":"rtp","application_type ":"Application","match":"match application rtp"},
+  {"name":"rtsp","application_type ":"Application","match":"match application rtsp"},
+  {"name":"sip","application_type ":"Application","match":"match application sip"},
+  {"name":"telepresence-control","application_type ":"Application","match":"match application telepresence-control"},
+  {"name":"telepresence-data","application_type ":"Application","match":"match application telepresence-data"},
+  {"name":"telepresence-media","application_type ":"Application","match":"match application telepresence-media"},
+  {"name":"vmware-view","application_type ":"Application","match":"match application vmware-view"},
+  {"name":"xmpp-client","application_type ":"Application","match":"match application xmpp-client"},
+  {"name":"telepresence-group","application_type ":"application-group","match":"match application match application application-group telepresence-group"},
+  {"name":"vmware-group","application_type ":"application-group","match":"match application match application application-group vmware-group"},
+  {"name":"webex-group","application_type ":"application-group","match":"match application match application application-group webex-group"},
+  {"name":"business-and-productivity-tools","application_type ":"Category","match":"match application attribute category business-and-productivity-tools"},
+  {"name":"physical-security","application_type ":"Category","match":"match application attribute category physical-security"},
+  {"name":"voice-and-video","application_type ":"Category","match":"match application attribute category voice-and-video"},
+  {"name":"control-and-signaling","application_type ":"sub-category","match":"match application attribute sub-category control-and-signaling"},
+  {"name":"remote-access-terminal","application_type ":"sub-category","match":"match application attribute sub-category remote-access-terminal"},
+  {"name":"video-surveillance","application_type ":"sub-category","match":"match application attribute sub-category video-surveillance"},
+  {"name":"voice-video-chat-collaboration","application_type ":"device-class","match":"match application attribute sub-category voice-video-chat-collaboration"},
+  {"name":"desktop-conferencing","application_type ":"device-class","match":"match application attribute device-class desktop-conferencing"},
+  {"name":"desktop-virtualization","application_type ":"device-class","match":"match application attribute device-class desktop-virtualization"},
+  {"name":"physical-phone","application_type ":"device-class","match":"match application attribute device-class physical-phone"},
+  {"name":"room-conferencing","application_type ":"device-class","match":"match application attribute device-class room-conferencing"},
+  {"name":"software-phone","application_type ":"device-class","match":"match application attribute device-class software-phone"},
+  {"name":"surveillance","application_type ":"device-class","match":"match application attribute device-class surveillance"},
+  {"name":"audio","application_type ":"media-type","match":"match application attribute media-type audio"},
+  {"name":"audio-video","application_type ":"media-type","match":"match application attribute media-type audio-video"},
+  {"name":"control","application_type ":"media-type","match":"match application attribute media-type control"},
+  {"name":"software-phone","application_type ":"media-type","match":"match application attribute media-type data"},
+  {"name":"video","application_type ":"media-type","match":"match application attribute media-type video"}]}
